Using the shellcheck image directly now

--- a/.drone.yml
+++ b/.drone.yml
@@ -1,7 +1,3 @@
-image: bradrydzewski/ubuntu
+image: cromo/shellcheck
 script:
-  - apt-get update
-  - apt-get install -y cabal-install
-  - cabal update
-  - cabal install shellcheck
   - shellcheck mac
